Consistent crashing with hair when switching between object mode and edit mode. #57907

Closed
opened 2018-11-18 09:23:59 +01:00 by Daniel Rigler · 6 comments

Now that Sergey (thanks man!) had fixed the switching between particle edit and object modes (#57477) the latest daily build now crashes when switching between object and edit modes. All other things including reproduction and hardware specs are same as in #57477. Let me know if you need additional details.

Now that Sergey (thanks man!) had fixed the switching between particle edit and object modes (#57477) the latest daily build now crashes when switching between object and edit modes. All other things including reproduction and hardware specs are same as in #57477. Let me know if you need additional details.
Author

Added subscriber: @dddstudio

Added subscriber: @dddstudio

Added subscriber: @Sergey

Added subscriber: @Sergey

Need more details here, preferably simple .blend file (but also all the system info.. is always a good idea to follow the bug report template ;)

Thing is: i can't reproduce the crash =\

Marking as incomplete since the reporter input is needed.

Need more details here, preferably simple .blend file (but also all the system info.. is always a good idea to follow the bug report template ;) Thing is: i can't reproduce the crash =\ Marking as incomplete since the reporter input is needed.
Author

I could reproduce this on multiple Win10(64) systems. Both with Nvidia and integrated Intel videocards.
I'll try to upload more info later. But it is really simple, try the following:

  1. Apply hair to the startup cube.
  2. Go into PARTICLE EDIT and brush the parents.
  3. Switch to OBJECT mode.
  4. Switch to EDIT mode.
  5. Switch back to OBJECT mode.
  6. CRASH!.
I could reproduce this on multiple Win10(64) systems. Both with Nvidia and integrated Intel videocards. I'll try to upload more info later. But it is really simple, try the following: 1. Apply hair to the startup cube. 2. Go into PARTICLE EDIT and brush the parents. 3. Switch to OBJECT mode. 4. Switch to EDIT mode. 5. Switch back to OBJECT mode. 6. CRASH!.
Sergey Sharybin self-assigned this 2018-11-19 13:58:51 +01:00

This issue was referenced by 82c3fdd559

This issue was referenced by 82c3fdd559b32d88881883b99cf441935401cf05

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57907
No description provided.